--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+dist: trusty
 
 notifications:
   email:
@@ -13,6 +14,7 @@ branches:
 android:
   components:
     - tools
+    - platform-tools
     - build-tools-29.0.3
     - android-28
     - extra
@@ -20,5 +22,19 @@ android:
 jdk:
   - oraclejdk8
 
-# script:
-#    - ./gradlew clean jacocoTestReport coveralls
+before_install:
+  - yes | sdkmanager "build-tools;28.0.3"
+  - yes | sdkmanager "platforms;android-28"
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
+
+script:
+   - ./gradlew clean build jacocoTestReport coveralls
